Welcome TipKit Added

--- a/MarvelApp/en.lproj/Localizable.strings
+++ b/MarvelApp/en.lproj/Localizable.strings
@@ -9,3 +9,5 @@
 "Search Character" = "Search Character";
 "Marvel Characters" = "Marvel Characters";
 "Has no description..." = "Has no description...";
+"Welcome to the start" = "Welcome to the start";
+"Browse and enjoy!" = "Browse and enjoy!";
