--- a/MarvelApp/es-419.lproj/Localizable.strings
+++ b/MarvelApp/es-419.lproj/Localizable.strings
@@ -9,3 +9,5 @@
 "Search Character" = "Buscar Personaje";
 "Marvel Characters" = "Personajes de Marvel";
 "Has no description..." = "No tiene descripcion...";
+"Welcome to the start" = "Bienvenido al inicio";
+"Browse and enjoy!" = "Navega y disfruta!";
